SERVER-13960 fix access planning for OR with inexact child predicates

Includes a refactor of QueryPlannerAccess::processIndexScans(...) which makes this
change saner.

(cherry picked from commit bee249ac8907cc9de6b19ba87c3fcb074d84b1a3)